[gd_scene load_steps=4 format=3 uid="uid://chns3wd2slokb"]

[ext_resource type="Script" uid="uid://dsi60xy4b6aps" path="res://Scripts/credits.gd" id="1"]
[ext_resource type="FontFile" uid="uid://bx5yalsgmp38n" path="res://Assets/Font/Jersey10-Regular.ttf" id="2_gryuy"]
[ext_resource type="Texture2D" uid="uid://dgugllyjnvlhh" path="res://Assets/Mobile Buttons/crouch.png" id="3_ccovl"]

[node name="Credits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 24.0
offset_right = 152.0
offset_bottom = 72.0
theme_override_font_sizes/font_size = 24
text = "Back"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CompletionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_gryuy")
theme_override_font_sizes/font_size = 30
text = "Fragments: 0/0"
horizontal_alignment = 1

[node name="EndingLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_gryuy")
theme_override_font_sizes/font_size = 30
text = "ENDING TYPE"
horizontal_alignment = 1

[node name="EndingArt" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CreditsText" type="RichTextLabel" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("2_gryuy")
theme_override_fonts/bold_font = ExtResource("2_gryuy")
theme_override_fonts/bold_italics_font = ExtResource("2_gryuy")
theme_override_fonts/italics_font = ExtResource("2_gryuy")
theme_override_fonts/mono_font = ExtResource("2_gryuy")
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 30
theme_override_font_sizes/bold_italics_font_size = 30
theme_override_font_sizes/italics_font_size = 30
theme_override_font_sizes/mono_font_size = 30
bbcode_enabled = true
text = "Credits go here"
fit_content = true

[node name="Music" type="AudioStreamPlayer" parent="."]

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
modulate = Color(1, 1, 1, 0.39215687)
position = Vector2(1056, 547)
scale = Vector2(0.5626694, 0.5626694)
texture_normal = ExtResource("3_ccovl")
action = "ui_cancel"
